# learnsdl

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  notify.py
core/: Button.cpp  Button.hpp  Dot.cpp  Dot.hpp  Texture.cpp  Texture.hpp  Timer.cpp  Timer.hpp  consts.hpp
includes/: Button.h  Dot.h  Texture.h  Timer.h  consts.h
src/: Button.cpp  Dot.cpp  Texture.cpp  Timer.cpp  main.cpp
